# treetop-rest

./: .markdownlint.json  Cargo.toml  Changelog.md  Dockerfile  LICENSE  README.md  build.rs  docker-compose.yml  policies.cedar
.github/: dependabot.yml
.github/workflows/: docker-build.yml  perf.yml  release.yml  rust.yml
benches/: authorize_batch.rs  authorize_batch_brief_128_callgrind.rs  authorize_batch_brief_32_callgrind.rs  authorize_batch_brief_8_callgrind.rs  authorize_batch_detailed_128_callgrind.rs  authorize_batch_detailed_32_callgrind.rs  authorize_batch_detailed_8_callgrind.rs  authorize_batch_small.rs  cli_matrix.rs  cli_matrix_bracketed_callgrind.rs  cli_matrix_simple_callgrind.rs  cli_matrix_with_attrs_callgrind.rs  e2e_authorize_groups.rs  e2e_authorize_groups_callgrind.rs  e2e_authorize_large_dsl.rs  e2e_authorize_large_dsl_callgrind.rs  e2e_authorize_light.rs  e2e_authorize_nested_namespaces.rs  e2e_list_policies_groups.rs  e2e_list_policies_groups_callgrind.rs  e2e_list_policies_large_dsl.rs  e2e_list_policies_light.rs  e2e_list_policies_nested_namespaces.rs  e2e_list_policies_nested_namespaces_callgrind.rs  labels.rs  labels_callgrind.rs  middleware_ip.rs  middleware_ip_allowlist_hit_callgrind.rs  middleware_ip_allowlist_miss_callgrind.rs  middleware_ip_peer_addr_callgrind.rs  middleware_ip_trusted_header_callgrind.rs  middleware_tracing.rs  middleware_tracing_callgrind.rs  policy_store.rs  policy_store_metadata_default_callgrind.rs  policy_store_metadata_dns_callgrind.rs  policy_store_set_dsl_default_callgrind.rs  policy_store_set_dsl_with_source_callgrind.rs
benches/authorize_batch/: common.rs
docs/: api.md  config.md  matrix.md  openapi.json
examples/: batch_example.sh  matrix_example.sh  openapi.rs
src/: build_info.rs  cli.rs  config.rs  errors.rs  fetcher.rs  handlers.rs  hostlabel_fetcher.rs  lib.rs  metrics.rs  middeware.rs  middleware.rs  models.rs  parallel.rs  policy_fetcher.rs  state.rs  style.rs
src/cli/: api_client.rs  cli_config.rs  completion.rs  matrix.rs  mod.rs  models.rs  paths.rs  repl.rs  style.rs
src/fetcher/: generic.rs  host_name_label.rs  labels.rs  mod.rs  policy.rs  schema.rs
testdata/: default.cedar  dns.cedar
tests/: README.md  cli_parsing_tests.rs  client_allowlist_tests.rs  handler_tests.rs  integration_tests.rs  matrix_expansion_tests.rs  metrics_tests.rs  openapi_docs_tests.rs  principal_parsing_test.rs  test_cli_deserialization.rs  test_detailed_serialization.rs  url_encoding_test.rs
