[package]
name = "treetop-rest"
version = "0.0.1"
edition = "2024"
build = "build.rs"

[dependencies]
actix-service = "2.0"
actix-web = "4.11"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
env_logger = "0.11"
futures = "0.3"
futures-util = "0.3"
regex = "1.11"
reqwest = { version = "0.12", features = ["json"] }
rustyline = "17.0"
serde = "1"
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1.46", features = ["full"] }
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-subscriber = { version = "0.3", features = [
    "chrono",
    "env-filter",
    "json",
    "serde",
    "serde_json",
] }
treetop-core = "0.0.12"
url = { version = "2.5", features = ["serde"] }
utoipa = { version = "5.4", features = ["actix_extras", "chrono", "yaml"] }
utoipa-swagger-ui = { version = "9.0", features = ["actix-web"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"

[dev-dependencies]
actix-rt = "2.10"
rstest = "0.26"
tempfile = "3.15"

[build-dependencies]
vergen = { version = "9", features = [
    "emit_and_set",
    "build",
    "cargo",
    "rustc",
    "si",
] }
vergen-gitcl = { version = "1", features = [
    "emit_and_set",
    "build",
    "cargo",
    "rustc",
    "si",
] }

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"
