[package]
name = "treetop-rest"
version = "0.0.6"
edition = "2024"
build = "build.rs"
autobenches = false

[dependencies]
actix-service = "2.0"
actix-web = "4.13"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6", features = ["derive", "env"] }
colored = "3"
dirs = "6"
env_logger = "0.11"
futures = "0.3"
futures-util = "0.3"
ipnet = "2.12"
itoa = "1.0"
lru = "0.16"
rayon = "1.11"
regex = "1.12"
reqwest = { version = "0.13", features = ["json"] }
rustyline = "18.0"
serde = "1"
tabled = "0.20"
serde_json = "1"
toml = "1.1"
sha2 = "0.11"
tokio = { version = "1.52", features = ["full"] }
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-subscriber = { version = "0.3", features = [
    "chrono",
    "env-filter",
    "json",
    "serde",
    "serde_json",
] }
treetop-core = { version = "0.0.17", features = ["observability"] }
prometheus = "0.14"
url = { version = "2.5", features = ["serde"] }
utoipa = { version = "5.4", features = ["actix_extras", "chrono", "yaml"] }
utoipa-swagger-ui = { version = "9.0", features = ["actix-web", "vendored"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
cedar-policy = "4.9"

[dev-dependencies]
actix-rt = "2.11"
actix-http = "3"
rstest = "0.26"
tempfile = "3.27"
iai-callgrind = "0.16"

[build-dependencies]
vergen = { version = "9", features = [
    "emit_and_set",
    "build",
    "cargo",
    "rustc",
    "si",
] }
vergen-gitcl = { version = "9", features = [
    "emit_and_set",
    "build",
    "cargo",
    "rustc",
    "si",
] }

[[bin]]
name = "treetop-server"
path = "src/bin/server.rs"

[[bin]]
name = "treetop-cli"
path = "src/bin/cli.rs"

[profile.release]
debug = true

[[bench]]
name = "authorize_batch_brief_8_callgrind"
harness = false

[[bench]]
name = "authorize_batch_brief_32_callgrind"
harness = false

[[bench]]
name = "authorize_batch_brief_128_callgrind"
harness = false

[[bench]]
name = "authorize_batch_detailed_8_callgrind"
harness = false

[[bench]]
name = "authorize_batch_detailed_32_callgrind"
harness = false

[[bench]]
name = "authorize_batch_detailed_128_callgrind"
harness = false

[[bench]]
name = "cli_matrix_simple_callgrind"
harness = false

[[bench]]
name = "cli_matrix_bracketed_callgrind"
harness = false

[[bench]]
name = "cli_matrix_with_attrs_callgrind"
harness = false

[[bench]]
name = "labels_callgrind"
harness = false

[[bench]]
name = "middleware_ip_trusted_header_callgrind"
harness = false

[[bench]]
name = "middleware_ip_peer_addr_callgrind"
harness = false

[[bench]]
name = "middleware_ip_allowlist_hit_callgrind"
harness = false

[[bench]]
name = "middleware_ip_allowlist_miss_callgrind"
harness = false

[[bench]]
name = "middleware_tracing_callgrind"
harness = false

[[bench]]
name = "policy_store_metadata_default_callgrind"
harness = false

[[bench]]
name = "policy_store_metadata_dns_callgrind"
harness = false

[[bench]]
name = "policy_store_set_dsl_default_callgrind"
harness = false

[[bench]]
name = "policy_store_set_dsl_with_source_callgrind"
harness = false

[[bench]]
name = "e2e_authorize_light_callgrind"
harness = false

[[bench]]
name = "e2e_authorize_groups_callgrind"
harness = false

[[bench]]
name = "e2e_authorize_nested_namespaces_callgrind"
harness = false

[[bench]]
name = "e2e_authorize_large_dsl_callgrind"
harness = false

[[bench]]
name = "e2e_list_policies_light_callgrind"
harness = false

[[bench]]
name = "e2e_list_policies_groups_callgrind"
harness = false

[[bench]]
name = "e2e_list_policies_nested_namespaces_callgrind"
harness = false

[[bench]]
name = "e2e_list_policies_large_dsl_callgrind"
harness = false
